# TomlCfg

./: README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml  run_tests.yml
tests/: conftest.py  dicts.py  test_model.py
tomlcfg/: merge.py  model.py
