[project]
name = "tomlcfg"
version = "0.1.0"
description = "Lightweight interface class model with toml configuration"
authors = [
    {name = "Olezhich"}
]
license = {text = "MIT"}
keywords = ["config", "configuration", "toml", "merge"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

